Bug 250506 - Modification of default profile is creating new profile.
Summary: Modification of default profile is creating new profile.
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.5
Platform: Ubuntu Linux
: HI normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-08 01:48 UTC by Andrzej
Modified: 2012-05-15 17:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrzej 2010-09-08 01:48:10 UTC
Version:           2.5 (using KDE 4.5.0) 
OS:                Linux

(starting with empty ~/.kde/share/apps/konsole/ )
When default Shell profile is modified a new profile is created in "Manage Profiles - Konsole" (after restart)
This happens when I use Polish language.

When I switch to English 
(after deleting ~/.kde/share/apps/konsole/*.profiles)
everything work as expected i.e. modification of default Shell profile does not cause creation of new profile in:
Settings -> Configure Profiles...

Reproducible: Always




OS: Linux (i686) release 2.6.35.4
Compiler: gcc
Comment 1 Jekyll Wu 2011-08-05 03:39:35 UTC
I think that is the expected behavior .

If the default profile is a system profile, modifying it will create a new profile with the *same name* under ~/.kde/share/apps/konsole. This is quite logical: what do you expect konsole to do when it needs to save modification against a file on which it has no write permission ?

Locale should be irrelevant. Just check whether new profile is created under ~/.kde/share/apps/konsole.
Comment 2 Andrzej 2011-09-06 21:29:31 UTC
The problem is that the file created in ~/.kde/share/apps/konsole is not exactly the *same name*. The name is translated in to Polish.
Powłoka.profile instead of Shell.profile.
I had to rename the file manually to have only one profile visible.
Comment 3 Jekyll Wu 2011-09-07 03:00:35 UTC
(In reply to comment #2)
> 

Yeah, you are right. I see the real problem now.
Comment 4 Jekyll Wu 2012-05-15 17:52:53 UTC
Git commit 6fa0121b8ef31934153767678ed18467e900eca0 by Jekyll Wu.
Committed on 15/05/2012 at 19:08.
Pushed by jekyllwu into branch 'master'.

When saving profile, always use its untranslated name as filename

An internal property is introduced to record the untranslated name.
When saving profile into disk, always refer to that untranslated name
to get the filename.

This extra consideration is intended to deal with the situation when the
profile's contents are i18nized. The typical example is the "Shell" profile
shipped by default.
FIXED-IN: 4.9.0

M  +2    -0    src/Profile.cpp
M  +9    -0    src/Profile.h
M  +2    -0    src/ProfileReader.cpp
M  +1    -1    src/ProfileWriter.cpp

http://commits.kde.org/konsole/6fa0121b8ef31934153767678ed18467e900eca0